{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 19,
  "lineage": "5cd55082-6ebc-7d43-f48d-becea33751c3",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04614182e0da1161d",
            "arn": "arn:aws:ec2:us-east-1:987192913539:instance/i-029225b6e309b33aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029225b6e309b33aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-032bf1b75718479c9",
            "private_dns": "ip-10-4-39-205.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.4.39.205",
            "public_ip": "52.72.128.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0027296016048b28f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7b241bc9d7ce0ab",
            "tags": {
              "Environment": "dev",
              "Name": "AWS_Project",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "AWS_Project",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "AWS_Project"
            },
            "vpc_security_group_ids": [
              "sg-0a8cd82459df29ab4"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "module.ec2.aws_iam_instance_profile.this",
            "module.ec2.data.aws_ssm_parameter.this",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc1.aws_subnet.private",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987192913539:security-group/sg-0a8cd82459df29ab4",
            "description": "Security group for example usage with EC2 instance",
            "egress": [],
            "id": "sg-0a8cd82459df29ab4",
            "ingress": [],
            "name": "AWS_Project-20230124012624275900000001",
            "name_prefix": "AWS_Project-",
            "owner_id": "987192913539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "AWS_Project",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "AWS_Project",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-09911b8e92deb6c06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2121327997",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a8cd82459df29ab4",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1394082439",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a8cd82459df29ab4",
            "security_group_rule_id": "sgr-05a1fcd8868542945",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc1.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-6911650",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0a8cd82459df29ab4",
            "security_group_rule_id": "sgr-0186eea718a4ae22e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987192913539:security-group/sg-08c06964d9f2117a4",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c06964d9f2117a4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all internal TCP and UDP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "987192913539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "AWS_project-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "AWS_project-sg",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09911b8e92deb6c06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987192913539:internet-gateway/igw-0e24a38f2e7d50f1f",
            "id": "igw-0e24a38f2e7d50f1f",
            "owner_id": "987192913539",
            "tags": {
              "Environment": "dev",
              "Name": "Project_AWS",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Project_AWS",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09911b8e92deb6c06"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e24a38f2e7d50f1f",
            "id": "r-rtb-0f5259e6f051a7b961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f5259e6f051a7b96",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_internet_gateway.this",
            "module.vpc1.aws_route_table.public",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987192913539:route-table/rtb-056f14113c5f41e17",
            "id": "rtb-056f14113c5f41e17",
            "owner_id": "987192913539",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Project_AWS-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Project_AWS-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09911b8e92deb6c06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987192913539:route-table/rtb-04103b85d96d70162",
            "id": "rtb-04103b85d96d70162",
            "owner_id": "987192913539",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Project_AWS-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Project_AWS-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09911b8e92deb6c06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987192913539:route-table/rtb-0f5259e6f051a7b96",
            "id": "rtb-0f5259e6f051a7b96",
            "owner_id": "987192913539",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Project_AWS-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Project_AWS-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09911b8e92deb6c06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a601d336f71a216",
            "route_table_id": "rtb-056f14113c5f41e17",
            "subnet_id": "subnet-0b7b241bc9d7ce0ab"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc1.aws_route_table.private",
            "module.vpc1.aws_subnet.private",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4fbc31838c95a59",
            "route_table_id": "rtb-04103b85d96d70162",
            "subnet_id": "subnet-03950192d1053f97b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc1.aws_route_table.private",
            "module.vpc1.aws_subnet.private",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1c50a3ce8b193d5",
            "route_table_id": "rtb-0f5259e6f051a7b96",
            "subnet_id": "subnet-0da7e85660de7f961"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc1.aws_route_table.public",
            "module.vpc1.aws_subnet.public",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987192913539:subnet/subnet-0b7b241bc9d7ce0ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.4.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7b241bc9d7ce0ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987192913539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Project_AWS-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Project_AWS-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09911b8e92deb6c06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987192913539:subnet/subnet-03950192d1053f97b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.4.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03950192d1053f97b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987192913539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Project_AWS-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Project_AWS-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09911b8e92deb6c06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987192913539:subnet/subnet-0da7e85660de7f961",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.4.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da7e85660de7f961",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987192913539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Project_AWS-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Project_AWS-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09911b8e92deb6c06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987192913539:vpc/vpc-09911b8e92deb6c06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-01dda9c71a5fb187c",
            "default_route_table_id": "rtb-02a240e65ddeaf125",
            "default_security_group_id": "sg-08c06964d9f2117a4",
            "dhcp_options_id": "dopt-0be719b637e91b05d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09911b8e92deb6c06",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a240e65ddeaf125",
            "owner_id": "987192913539",
            "tags": {
              "Environment": "dev",
              "Name": "Project_AWS",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Project_AWS",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}